--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,18 @@
-# Ignore node_modules, ncc is used to compile nodejs modules into a single file in the releases branch
-node_modules/
+# Build and Release Folders
+bin-debug/
+bin-release/
+[Oo]bj/
+[Bb]in/
 
-# Ignore js files that are transpiled from ts files in src/
-lib/
+# Other files and folders
+.settings/
+
+# Executables
+*.swf
+*.air
+*.ipa
+*.apk
+
+# Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
+# should NOT be excluded as they contain compiler settings and other important
+# information for Eclipse / Flash Builder.
